# AI-ML-Calibration-Platform

./: .replit  README.md  app.py  pyproject.toml  replit.md  sensor_data.db  test_anomaly_detection.py  test_calibration_engine.py  test_drift_prediction.py  test_predict_anomaly_fix.py  test_sensor_simulation.py
.streamlit/: config.toml
modules/: alert_system.py  anomaly_detector.py  calibration_engine.py  database_manager.py  drift_predictor.py  report_generator.py  sensor_simulator.py
utils/: data_processor.py  visualization.py
